# BOT-Recepcionista-

./: README.md  pyproject.toml  reply_whatsapp.py  send_whatsapp.py
src/desafio/: crew.py  main.py
src/desafio/config/: agents.yaml  tasks.yaml
src/desafio/tools/: CalendarSchedulerTool.py  TranscribeAudioTool.py  TwilioReceiverTool.py  TwilioSenderTool.py
tests/: test.py
